[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["s-tyda <styda@huhha.co>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.25"
psycopg2-binary = "^2.9.1"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.1"
alembic = "^1.7.4"
inflect = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
sqlalchemy-stubs = "^0.4"
flake8 = "^4.0.1"
autoflake = "^1.4"
isort = "^5.9.3"
black = {extras = ["d"], version = "^21.9b0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
